Add more sentences

--- a/docs/works/shannon-test-sentences.mdx
+++ b/docs/works/shannon-test-sentences.mdx
@@ -85,10 +85,10 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>umo moskül nokdo ovek nüyo yë kon lö wowoë lı si totsı hoi söpo yë pëlëtë gosil.&emsp;<em>An old man with a walking stick stood beside the fence.</em></p>
 <p>ölë nıwos yë cüi nomü lı si ëo vicwo ü tolën nomü weltö.&emsp;<em>The squirrel's nest was hidden by drooping boughs.</em></p>
 <p>oüdi cüti motsı si pı sonti hoi sël yë pölvëlë hüzon pukü müt pinton lono yë yogö üsën niök et yë tüt yoüti.&emsp;<em>The little seeds waited patiently under the snow for the warm spring sun.</em></p>
-<p>&emsp;<em>Many little girls with wreaths of flowers on their heads danced around the bonfire.</em></p>
-<p>&emsp;<em>The cover of the basket fell to the floor.</em></p>
-<p>&emsp;<em>The first boy in the line stopped at the entrance.</em></p>
-<p>&emsp;<em>On the top of the hill in a little hut lived a wise old woman.</em></p>
+<p>ëto umo wohi xonluk xe ovek wutun inpoli xe hoi wik, lı cıvulo hoi ünhılun yë mötö vimösyös.&emsp;<em>Many little girls with wreaths of flowers on their heads danced around the bonfire.</em></p>
+<p>yogö yë dıpo in mötsılë lı si zigil müt sokovü.&emsp;<em>The cover of the basket fell to the floor.</em></p>
+<p>umo moskül xonluk kut yë gito niltügu si hoi zınkon kon gik.&emsp;<em>The first boy in the line stopped at the entrance.</em></p>
+<p>hoi cën yë töxütsı pümi hoi limien yë nıwos cüti nıwos si ü umo wohi nokdo colot.&emsp;<em>On the top of the hill in a little hut lived a wise old woman.</em></p>
 <p>&emsp;<em>During our residence in the country we often walked in the pastures.</em></p>
 <p>&emsp;<em>When will your guests from the city arrive?</em></p>
 <p>&emsp;<em>Near the mouth of the river, its course turns sharply towards the East.</em></p>
