add more test sentences

--- a/docs/works/shannon-test-sentences.mdx
+++ b/docs/works/shannon-test-sentences.mdx
@@ -89,32 +89,32 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>yogö yë dıpo in mötsılë lı si zigil müt sokovü.&emsp;<em>The cover of the basket fell to the floor.</em></p>
 <p>umo moskül xonluk kut yë gito niltügu si hoi zınkon kon gik.&emsp;<em>The first boy in the line stopped at the entrance.</em></p>
 <p>hoi cën yë töxütsı pümi hoi limien yë nıwos cüti nıwos si ü umo wohi nokdo colot.&emsp;<em>On the top of the hill in a little hut lived a wise old woman.</em></p>
-<p>&emsp;<em>During our residence in the country we often walked in the pastures.</em></p>
-<p>&emsp;<em>When will your guests from the city arrive?</em></p>
-<p>&emsp;<em>Near the mouth of the river, its course turns sharply towards the East.</em></p>
-<p>&emsp;<em>Between the two lofty mountains lay a fertile valley.</em></p>
-<p>&emsp;<em>Among the wheat grew tall red poppies.</em></p>
-<p>&emsp;<em>The strong roots of the oak trees were torn from the ground.</em></p>
-<p>&emsp;<em>The sun looked down through the branches upon the children at play.</em></p>
-<p>&emsp;<em>The west wind blew across my face like a friendly caress.</em></p>
-<p>&emsp;<em>The spool of thread rolled across the floor.</em></p>
-<p>&emsp;<em>A box of growing plants stood in the Window.</em></p>
-<p>&emsp;<em>I am very happy.</em></p>
-<p>&emsp;<em>These oranges are juicy.</em></p>
-<p>&emsp;<em>Sea water is salty.</em></p>
-<p>&emsp;<em>The streets are full of people.</em></p>
-<p>&emsp;<em>Sugar tastes sweet.</em></p>
-<p>&emsp;<em>The fire feels hot.</em></p>
-<p>&emsp;<em>The little girl seemed lonely.</em></p>
-<p>&emsp;<em>The little boy's father had once been a sailor.</em></p>
-<p>&emsp;<em>I have lost my blanket.</em></p>
-<p>&emsp;<em>A robin has built his nest in the apple tree.</em></p>
-<p>&emsp;<em>At noon we ate our lunch by the roadside.</em></p>
-<p>&emsp;<em>Mr. Jones made a knife for his little boy.</em></p>
-<p>&emsp;<em>Their voices sound very happy.</em></p>
-<p>&emsp;<em>Is today Monday?</em></p>
-<p>&emsp;<em>Have all the leaves fallen from the tree?</em></p>
-<p>&emsp;<em>Will you be ready on time?</em></p>
+<p>hoi woküt yë kon nıwos yë venüo onö ü nü pı ëto lı lö vio wowoë hoi comen zonwul onö.&emsp;<em>During our residence in the country we often walked in the pastures.</em></p>
+<p>hoi woküt zık ü monodo sün sınsi cënpö lı gik.&emsp;<em>When will your guests from the city arrive?</em></p>
+<p>hoi vëlkonö yë göyu onö yë xüto onö ü titon nı lı si ınvultin pı cies müt kılukü.&emsp;<em>Near the mouth of the river, its course turns sharply towards the East.</em></p>
+<p>gıtno düi tohılök pümi ıwotë lı tıgoyo ü venüo süpöl yë pümi sël.&emsp;<em>Between the two lofty mountains lay a fertile valley.</em></p>
+<p>gıtno gos lisik liun si inpoli hünsık ıwotë.&emsp;<em>Among the wheat grew tall red poppies.</em></p>
+<p>ölë ziziyo len onö yë ëto nomü onö lı ëo vunlit sün pümi onö.&emsp;<em>The strong roots of the oak trees were torn from the ground.</em></p>
+<p>pinton lono onö pı sël gıtno tolën nomü dëko si mënyüu onö xe kelo.&emsp;<em>The sun looked down through the branches upon the children at play.</em></p>
+<p>woyü vitikös üslëk söpo ënkömön mıslı kon okülo sütüö.&emsp;<em>The west wind blew across my face like a friendly caress.</em></p>
+<p>küldü onö yë doi lı si ınvultin hoi sokovü.&emsp;<em>The spool of thread rolled across the floor.</em></p>
+<p>dıpo yë gos xe liun, lı si totsı hoi kümun opoki.&emsp;<em>A box of growing plants stood in the Window.</em></p>
+<p>noyo lı xowosë ëto.&emsp;<em>I am very happy.</em></p>
+<p>küöxı nomü zingu övo yünyoü ëto mötowo yë iskö küöxı.&emsp;<em>These oranges are juicy.</em></p>
+<p>ximu xömütlö lı xöpoi.&emsp;<em>Sea water is salty.</em></p>
+<p>titon onö lı mülü yë umo.&emsp;<em>The streets are full of people.</em></p>
+<p>pölvëlë süwit sopölë ëo süwit.&emsp;<em>Sugar tastes sweet.</em></p>
+<p>mötö onö oncëmon ëo tüt&emsp;<em>The fire feels hot.</em></p>
+<p>vos umo wohi xonluk cüti oncëmon tölki, lı xoinpo.&emsp;<em>The little girl seemed lonely.</em></p>
+<p>motüo moskül yë umo moskül xonluk cüti pı kut lı si öni tulutı xömütlö.&emsp;<em>The little boy's father had once been a sailor.</em></p>
+<p>noyo nocido si lipü polce nulun noyo.&emsp;<em>I have lost my blanket.</em></p>
+<p>timiok yë wıkse cınöpu köson si nıwos niün hoi nomü onö yë küöxı hünsık süwit.&emsp;<em>A robin has built his nest in the apple tree.</em></p>
+<p>hoi mutyu lono ü nü mokon si cöüvon nü hoi söpo titon.&emsp;<em>At noon we ate our lunch by the roadside.</em></p>
+<p>umo Zönsu pön si öni wëtü oxon umo moskül xonluk cüti niün.&emsp;<em>Mr. Jones made a knife for his little boy.</em></p>
+<p>ëtsö yë öitun niün lı xoinpo yë xowosë ëto.&emsp;<em>Their voices sound very happy.</em></p>
+<p>lono övo lı lono düsul ko.&emsp;<em>Is today Monday?</em></p>
+<p>woloko onö lı si zigil sün nomü ko.&emsp;<em>Have all the leaves fallen from the tree?</em></p>
+<p>nimü ke ondo si cızi hoi woküt ko.&emsp;<em>Will you be ready on time?</em></p>
 <p>&emsp;<em>Will you send this message for me?</em></p>
 <p>&emsp;<em>Are you waiting for me?</em></p>
 <p>&emsp;<em>Is this the first kitten of the litter?</em></p>
