--- a/docs/works/shannon-test-sentences.mdx
+++ b/docs/works/shannon-test-sentences.mdx
@@ -115,17 +115,17 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>lono övo lı lono düsul ko.&emsp;<em>Is today Monday?</em></p>
 <p>woloko onö lı si zigil sün nomü ko.&emsp;<em>Have all the leaves fallen from the tree?</em></p>
 <p>nimü ke ondo si cızi hoi woküt ko.&emsp;<em>Will you be ready on time?</em></p>
-<p>&emsp;<em>Will you send this message for me?</em></p>
-<p>&emsp;<em>Are you waiting for me?</em></p>
-<p>&emsp;<em>Is this the first kitten of the litter?</em></p>
-<p>&emsp;<em>Are these shoes too big for you?</em></p>
-<p>&emsp;<em>How wide is the River?</em></p>
-<p>&emsp;<em>Listen.</em></p>
-<p>&emsp;<em>Sit here by me.</em></p>
-<p>&emsp;<em>Keep this secret until tomorrow.</em></p>
-<p>&emsp;<em>Come with us.</em></p>
-<p>&emsp;<em>Bring your friends with you.</em></p>
-<p>&emsp;<em>Be careful.</em></p>
+<p>nimü ke luvono cukto övo oxon noyo ko.&emsp;<em>Will you send this message for me?</em></p>
+<p>nimü pı möcipo motsı noyo ko.&emsp;<em>Are you waiting for me?</em></p>
+<p>övo lı lözic mocko kut yë zomo kon lözic ko.&emsp;<em>Is this the first kitten of the litter?</em></p>
+<p>voko mevüs wowoë övo lı otıkon cënpö hön nimü ko.&emsp;<em>Are these shoes too big for you?</em></p>
+<p>pı zık lı nulto ü xüto.&emsp;<em>How wide is the River?</em></p>
+<p>küu tenkin.&emsp;<em>Listen.</em></p>
+<p>küu sıtyo övo yë vëlkonö noyo.&emsp;<em>Sit here by me.</em></p>
+<p>ölë övo küu lı ëo cosni möcipo ılık lono uklo.&emsp;<em>Keep this secret until tomorrow.</em></p>
+<p>küu lı cok ovek nü.&emsp;<em>Come with us.</em></p>
+<p>küu oköt sütüö nimü ovek nimü.&emsp;<em>Bring your friends with you.</em></p>
+<p>küu diyondë pı cönkök.&emsp;<em>Be careful.</em></p>
 <p>&emsp;<em>Have some tea.</em></p>
 <p>&emsp;<em>Pip and his dog were great friends.</em></p>
 <p>&emsp;<em>John and Elizabeth are brother and sister.</em></p>
