Add more sentences.

--- a/docs/works/shannon-test-sentences.mdx
+++ b/docs/works/shannon-test-sentences.mdx
@@ -126,23 +126,23 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>küu lı cok ovek nü.&emsp;<em>Come with us.</em></p>
 <p>küu oköt sütüö nimü ovek nimü.&emsp;<em>Bring your friends with you.</em></p>
 <p>küu diyondë pı cönkök.&emsp;<em>Be careful.</em></p>
-<p>&emsp;<em>Have some tea.</em></p>
-<p>&emsp;<em>Pip and his dog were great friends.</em></p>
-<p>&emsp;<em>John and Elizabeth are brother and sister.</em></p>
-<p>&emsp;<em>You and I will go together.</em></p>
-<p>&emsp;<em>They opened all the doors and windows.</em></p>
-<p>&emsp;<em>He is small, but strong.</em></p>
-<p>&emsp;<em>Is this tree an oak or a maple?</em></p>
-<p>&emsp;<em>Does the sky look blue or gray?</em></p>
-<p>&emsp;<em>Come with your father or mother.</em></p>
-<p>&emsp;<em>I am tired, but very happy.</em></p>
-<p>&emsp;<em>He played a tune on his wonderful flute.</em></p>
-<p>&emsp;<em>Toward the end of August the days grow much shorter.</em></p>
-<p>&emsp;<em>A company of soldiers marched over the hill and across the meadow.</em></p>
-<p>&emsp;<em>The first part of the story is very interesting.</em></p>
-<p>&emsp;<em>The crow dropped some pebbles into the pitcher and raised the water to the brim.</em></p>
-<p>&emsp;<em>The baby clapped her hands and laughed in glee.</em></p>
-<p>&emsp;<em>Stop your game and be quiet.</em></p>
+<p>küu yünyoü yoüti iskö höncöü.&emsp;<em>Have some tea.</em></p>
+<p>umo Pıpu ün zowo niün lı si sütüö ëto.&emsp;<em>Pip and his dog were great friends.</em></p>
+<p>umo Zon ün umo Ilısopet lı sıskın.&emsp;<em>John and Elizabeth are brother and sister.</em></p>
+<p>nimü ün noyo ke lı lö ovek xokön dizel.&emsp;<em>You and I will go together.</em></p>
+<p>niün lı ëo put ölë möi zınkon ün kümun opoki.&emsp;<em>They opened all the doors and windows.</em></p>
+<p>niün lı cüti lëkın len.&emsp;<em>He is small, but strong.</em></p>
+<p>müt nomü övo vio hiskünco İngulıc somo nomü Ök yodo nomü Mëpul ko.&emsp;<em>Is this tree an oak or a maple?</em></p>
+<p>okoxu lı xoinpo in dëko mıslı zöi yodo düsul ko.&emsp;<em>Does the sky look blue or gray?</em></p>
+<p>küu lı lö ovek motüo moskül yodo motüo wohi.&emsp;<em>Come with your father or mother.</em></p>
+<p>noyo lı picüon lëkın lı xowosë ëto.&emsp;<em>I am tired, but very happy.</em></p>
+<p>niün kelo kontol vio yön in kontol yë mökövo in üslëk et küzoü niün.&emsp;<em>He played a tune on his wonderful flute.</em></p>
+<p>müt könyëc yë wuto tukwos ü lono di ëto gosil eswen.&emsp;<em>Toward the end of August the days grow much shorter.</em></p>
+<p>zomo cënpö yë umo güexo tulutı töxütsı pümi onö ün comen onö.&emsp;<em>A company of soldiers marched over the hill and across the meadow.</em></p>
+<p>yogö kut yë kiso lı voko sunyotni ëto.&emsp;<em>The first part of the story is very interesting.</em></p>
+<p>timiok nëlö onö müncoti yoüti ipüwë hoi xolu zilyois onö ün lı ëo cën ölë ximu müt dinzoü onö.&emsp;<em>The crow dropped some pebbles into the pitcher and raised the water to the brim.</em></p>
+<p>ü lözic onö lı si hoküxı lı si liülë pı xowosë.&emsp;<em>The baby clapped her hands and laughed in glee.</em></p>
+<p>küu niltügu kelo nimü küu lı homüs.&emsp;<em>Stop your game and be quiet.</em></p>
 <p>&emsp;<em>The sound of the drums grew louder and louder.</em></p>
 <p>&emsp;<em>Do you like summer or winter better?</em></p>
 <p>&emsp;<em>That boy will have a wonderful trip.</em></p>
