Add more sentences

--- a/docs/works/shannon-test-sentences.mdx
+++ b/docs/works/shannon-test-sentences.mdx
@@ -143,12 +143,12 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>timiok nëlö onö müncoti yoüti ipüwë hoi xolu zilyois onö ün lı ëo cën ölë ximu müt dinzoü onö.&emsp;<em>The crow dropped some pebbles into the pitcher and raised the water to the brim.</em></p>
 <p>ü lözic onö lı si hoküxı lı si liülë pı xowosë.&emsp;<em>The baby clapped her hands and laughed in glee.</em></p>
 <p>küu niltügu kelo nimü küu lı homüs.&emsp;<em>Stop your game and be quiet.</em></p>
-<p>&emsp;<em>The sound of the drums grew louder and louder.</em></p>
-<p>&emsp;<em>Do you like summer or winter better?</em></p>
-<p>&emsp;<em>That boy will have a wonderful trip.</em></p>
-<p>&emsp;<em>They popped corn, and then sat around the fire and ate it.</em></p>
-<p>&emsp;<em>They won the first two games, but lost the last one.</em></p>
-<p>&emsp;<em>Take this note, carry it to your mother; and wait for an answer.</em></p>
+<p>ü tenkin yë yön in kontol di pı oltü eswen pı oltü eswen.&emsp;<em>The sound of the drums grew louder and louder.</em></p>
+<p>nimü süko yogö üsën tüt yodo yogö üsën cunyü pı xön eswen ko.&emsp;<em>Do you like summer or winter better?</em></p>
+<p>umo moskül xonluk ulyö ke cinli wüöt küzoü.&emsp;<em>That boy will have a wonderful trip.</em></p>
+<p>niün cöüvon lisik yë hülü cöt ıwotë müt dumoko pinë sıtyo hoi ünhılun yë mötö ün mokon nı.&emsp;<em>They popped corn, and then sat around the fire and ate it.</em></p>
+<p>niün lı si pilüs hoi düi kelo kut lëkın nocido nı vëlcin.&emsp;<em>They won the first two games, but lost the last one.</em></p>
+<p>küu gomi lipü övo yë köto vos cukto si, küu oköt müt motüo wohi nimü pinë küu motsı zuwopü.&emsp;<em>Take this note, carry it to your mother; and wait for an answer.</em></p>
 <p>&emsp;<em>I awoke early, dressed hastily, and went down to breakfast.</em></p>
 <p>&emsp;<em>Aha! I have caught you!</em></p>
 <p>&emsp;<em>This string is too short!</em></p>
