add and update sentences

--- a/docs/works/shannon-test-sentences.mdx
+++ b/docs/works/shannon-test-sentences.mdx
@@ -22,22 +22,22 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>pinton lono poivön küon pı möcipo.&emsp;<em>The sun is shining.</em></p>
 <p>pinton lono poivön si küon.&emsp;<em>The sun shone.</em></p>
 <p>pinton lono ke poivön küon.&emsp;<em>The sun will shine.</em></p>
-<p>pinton lono poivön küon pı ılık.&emsp;<em>The sun has been shining.</em></p>
+<p>pinton lono poivön küon pı pıslon.&emsp;<em>The sun has been shining.</em></p>
 <p>pinton lono poivön küon pı möcipo pı woküt dizel&emsp;<em>The sun is shining again.</em></p>
 <p>pinton lono ke poivön küon hoi lono uklo.&emsp;<em>The sun will shine tomorrow.</em></p>
 <p>pinton lono poivön küon pı ëto.&emsp;<em>The sun shines brightly.</em></p>
 <p>pinton lono yë küon ëto poivön küon.&emsp;<em>The bright sun shines.</em></p>
-<p>pinton lono di mulö pı möcipo hoi ipüdü.&emsp;<em>The sun is rising now.</em></p>
-<p>möi umo pı oltü öitun.&emsp;<em>All the people shouted.</em></p>
-<p>yoüti umo pı oltü öitun.&emsp;<em>Some of the people shouted.</em></p>
+<p>pinton lono di cën pı möcipo hoi ipüdü.&emsp;<em>The sun is rising now.</em></p>
+<p>möi umo pı oltü öitun si.&emsp;<em>All the people shouted.</em></p>
+<p>yoüti umo pı oltü öitun si.&emsp;<em>Some of the people shouted.</em></p>
 <p>ëto umo pı oltü öitun pı düi.&emsp;<em>Many of the people shouted twice.</em></p>
 <p>umo xowosë pı ëto öitun.&emsp;<em>Happy people often shout.</em></p>
-<p>mocko xonluk tüu zoston pı mulö.&emsp;<em>The kitten jumped up.</em></p>
-<p>mocko xonluk tüu zoston müt miëpıl potuk.&emsp;<em>The kitten jumped onto the table.</em></p>
-<p>mocko xonluk cömël lı si cok. &emsp;<em>My little kitten walked away.</em></p>
+<p>mocko xonluk onö tüu si zoston pı cën.&emsp;<em>The kitten jumped up.</em></p>
+<p>mocko xonluk onö tüu si zoston müt miëpıl potuk.&emsp;<em>The kitten jumped onto the table.</em></p>
+<p>mocko xonluk cüti noyo lı si lö pı cok. &emsp;<em>My little kitten walked away.</em></p>
 <p>lı hüzon pı möcipo.&emsp;<em>It's raining.</em></p>
-<p>hüzon di si müt koli.&emsp;<em>The rain came down.</em></p>
-<p>mocko pı möcipo kelo hoi hüzon.&emsp;<em>The kitten is playing in the rain.</em></p>
+<p>hüzon di si müt sël.&emsp;<em>The rain came down.</em></p>
+<p>mocko onö pı möcipo kelo hoi hüzon.&emsp;<em>The kitten is playing in the rain.</em></p>
 <p>niltügu si hüzon.&emsp;<em>The rain has stopped.</em></p>
 <p>pı zelen ke niltügu hüzon.&emsp;<em>Soon the rain will stop.</em></p>
 <p>noyo xiwon vos pı zelen niltügu hüzon.&emsp;<em>I hope the rain stops soon.</em></p>
@@ -47,31 +47,31 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>nü küu lı lö.&emsp;<em>Let's go!</em></p>
 <p>nimü küu lı lö.&emsp;<em>You should go.</em></p>
 <p>noyo ke lı xowosë hön xe lı lö.&emsp;<em>I will be happy to go.</em></p>
-<p>niün ke lı gö hoi övo pı zelen.&emsp;<em>He will arrive soon.</em></p>
-<p>gundolë yë lözic lı si lö pı ınvultin sün poxö.&emsp;<em>The baby's ball has rolled away.</em></p>
-<p>düi umo moskül xonluk wëloı ovek xokön dizel.&emsp;<em>The two boys are working together.</em></p>
+<p>niün ke lı gik pı zelen.&emsp;<em>He will arrive soon.</em></p>
+<p>gundolë yë lözic onö lı si ınvultin pı cok.&emsp;<em>The baby's ball has rolled away.</em></p>
+<p>düi umo moskül xonluk onö wëloı ovek xokön dizel.&emsp;<em>The two boys are working together.</em></p>
 <p>üsmon ximu onö pı könën ke di vonmot.&emsp;<em>This mist will probably clear away.</em></p>
 <p>inpoli hosin lı niök hoi xokön.&emsp;<em>Lovely flowers are growing everywhere.</em></p>
 <p>nü küu mokon pı dilë eswen.&emsp;<em>We should eat more slowly.</em></p>
 <p>nimü di si hoi övo pı hëlxun otıkon.&emsp;<em>You have come too soon.</em></p>
-<p>nimü küu cukto pı cinmi eswen.&emsp;<em>You must write more neatly.</em></p>
+<p>nimü küu cukto pı cönkök eswen.&emsp;<em>You must write more neatly.</em></p>
 <p>hön elentët müstokin lı totsı ü nıwos moxo cënpö küzoü.&emsp;<em>Directly opposite stands a wonderful palace.</em></p>
 <p>zowo yë umo Henli köi yosten yök titon dündon. &emsp;<em>Henry's dog is lost.</em></p>
 <p>mocko noyo lı nëlö.&emsp;<em>My cat is black.</em></p>
-<p>döcui umo yë umo wohi xonluk cüti lı kopüt.&emsp;<em>The little girl's doll is broken.</em></p>
+<p>döcui umo yë umo wohi xonluk cüti onö lı kopüt.&emsp;<em>The little girl's doll is broken.</em></p>
 <p>noyo pı sodolun lı conzodo sunpülno.&emsp;<em>I usually sleep soundly.</em></p>
-<p>mënyüu onö pı wiki lı lö oxon xe doicël umo Zek.&emsp;<em>The children ran after Jack.</em></p>
-<p>noyo köi kelo hoi cıhöü woküt kon pëüdo.&emsp;<em>I can play after school.</em></p>
+<p>mënyüu onö pı viki lı lö oxon xe doicël umo Zek.&emsp;<em>The children ran after Jack.</em></p>
+<p>noyo köi kelo cıhöü woküt kon pëüdo.&emsp;<em>I can play after school.</em></p>
 <p>nü lı si lö müt sınsi oxon xe monodo.&emsp;<em>We went to the village for a visit.</em></p>
 <p>nü lı si gik hoi xüto.&emsp;<em>We arrived at the river.</em></p>
-<p>noyo motsı si hön nimü.&emsp;<em>I have been waiting for you.</em></p>
-<p>öni mühoyon sıtyo si hoi ünhılun yë mötö onö.&emsp;<em>The campers sat around the fire.</em></p>
+<p>noyo pı pıslon motsı hön nimü.&emsp;<em>I have been waiting for you.</em></p>
+<p>öni mühoyon onö sıtyo si hoi ünhılun yë mötö onö.&emsp;<em>The campers sat around the fire.</em></p>
 <p>umo wohi xonluk cüti xe ovek mocko xonluk, sıtyo si hoi vëlkonö noyo.&emsp;<em>A little girl with a kitten sat near me.</em></p>
-<p>mënyüu motsı si hoi zınkon hön motüo moskül niün.&emsp;<em>The child waited at the door for her father.</em></p>
-<p>hoi lono xopëk ü umo wohi xonluk yë nokdo möi nocido si mocko xonluk niün.&emsp;<em>Yesterday the oldest girl in the village lost her kitten.</em></p>
-<p>lözic nimü hoi sınsi övo ko.&emsp;<em>Were you born in this village?</em></p>
+<p>mënyüu onö motsı si hoi zınkon hön motüo moskül niün.&emsp;<em>The child waited at the door for her father.</em></p>
+<p>hoi lono xopëk ü umo wohi xonluk yë nokdo möi en sınsi onö nocido si mocko xonluk niün.&emsp;<em>Yesterday the oldest girl in the village lost her kitten.</em></p>
+<p>lözic si nimü hoi sınsi övo ko.&emsp;<em>Were you born in this village?</em></p>
 <p>sıskın moskül nimü köi lı cıvulo pı xön ko.&emsp;<em>Can your brother dance well?</em></p>
-<p>umo moskül lı si cok ko.&emsp;<em>Did the man leave?</em></p>
+<p>umo moskül onö lı si cok ko.&emsp;<em>Did the man leave?</em></p>
 <p>sıskın wohi nimü lı gik oxon nimü ko.&emsp;<em>Is your sister coming for you?</em></p>
 <p>nimü köi lı gik hoi lono uklo ko.&emsp;<em>Can you come tomorrow?</em></p>
 <p>öni nıwos vëlkonö lı si cok hön yogö üsën cunyü.&emsp;<em>Have the neighbors gone away for the winter?</em></p>
@@ -80,7 +80,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>nimü hoi ozüul woküt tulutı piömu nomü hüzon ko.&emsp;<em>Have you ever travelled in the jungle?</em></p>
 <p>nü oütö vio woyü müt cën yë xüto onö lon yoüti mönpılı xokön.&emsp;<em>We sailed down the river for several miles.</em></p>
 <p>xokön umo vısun kon wëtodü.&emsp;<em>Everybody knows about hunting.</em></p>
-<p>hoi lono xolxili yë cıhöü poxö yë dönüxın mönpılı yë pinton lono ü nü socok si müt tohılök pümi.&emsp;<em>On a Sunny morning after the solstice we started for the mountains.</em></p>
+<p>hoi lono xolxili xe cıhöü poxö yë dönüxın mönpılı yë pinton lono, ü nü socok si müt tohılök pümi.&emsp;<em>On a Sunny morning after the solstice we started for the mountains.</em></p>
 <p>umo Ton lı si liülë nënko cülci yë vonolon.&emsp;<em>Tom laughed at the monkey's tricks.</em></p>
 <p>umo moskül nokdo ovek nüyo yë kon lö wowoë lı si totsı hoi söpo yë pëlëtë gosil.&emsp;<em>An old man with a walking stick stood beside the fence.</em></p>
 <p>ölë nıwos yë cüi nomü lı si ëo vicwo ü tolën nomü weltö.&emsp;<em>The squirrel's nest was hidden by drooping boughs.</em></p>
@@ -149,25 +149,25 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>niün cöüvon lisik yë hülü cöt ıwotë müt dumoko pinë sıtyo hoi ünhılun yë mötö ün mokon nı.&emsp;<em>They popped corn, and then sat around the fire and ate it.</em></p>
 <p>niün lı si pilüs hoi düi kelo kut lëkın nocido nı vëlcin.&emsp;<em>They won the first two games, but lost the last one.</em></p>
 <p>küu gomi lipü övo yë köto vos cukto si, küu oköt müt motüo wohi nimü pinë küu motsı zuwopü.&emsp;<em>Take this note, carry it to your mother; and wait for an answer.</em></p>
-<p>&emsp;<em>I awoke early, dressed hastily, and went down to breakfast.</em></p>
-<p>&emsp;<em>Aha! I have caught you!</em></p>
-<p>&emsp;<em>This string is too short!</em></p>
-<p>&emsp;<em>Oh, dear! the wind has blown my hat away!</em></p>
-<p>&emsp;<em>Alas! that news is sad indeed!</em></p>
-<p>&emsp;<em>Whew! that cold wind freezes my nose!</em></p>
-<p>&emsp;<em>Are you warm enough now?</em></p>
-<p>&emsp;<em>They heard the warning too late.</em></p>
-<p>&emsp;<em>We are a brave people, and love our country.</em></p>
-<p>&emsp;<em>All the children came except Mary.</em></p>
-<p>&emsp;<em>Jack seized a handful of pebbles and threw them into the lake.</em></p>
-<p>&emsp;<em>This cottage stood on a low hill, at some distance from the village.</em></p>
-<p>&emsp;<em>On a fine summer evening, the two old people were sitting outside the door of their cottage.</em></p>
-<p>&emsp;<em>Our bird's name is Jacko.</em></p>
-<p>&emsp;<em>The river knows the way to the sea.</em></p>
-<p>&emsp;<em>The boat sails away, like a bird on the wing.</em></p>
-<p>&emsp;<em>They looked cautiously about, but saw nothing.</em></p>
-<p>&emsp;<em>The little house had three rooms, a sitting room, a bedroom, and a tiny kitchen.</em></p>
-<p>&emsp;<em>We visited my uncle's village, the largest village in the world.</em></p>
+<p>noyo di si wili pı hëlxun öntön si pı viki ün lı si lö sël müt cöüvon kut.&emsp;<em>I awoke early, dressed hastily, and went down to breakfast.</em></p>
+<p>o. noyo doicël si nimü voxo.&emsp;<em>Aha! I have caught you!</em></p>
+<p>doi övo lı otıkon gosil ze.&emsp;<em>This string is too short!</em></p>
+<p>oiyo. woyü üslëk si öni doknü wik noyo pı mönpılı.&emsp;<em>Oh, dear! the wind has blown my hat away!</em></p>
+<p>oiyo. ü vısun nëös ulyö lı küyö löicök.&emsp;<em>Alas! that news is sad indeed!</em></p>
+<p>oiyo. woyü cunyü ulyö lı ëo pukü ölë nosiko noyo voxo.&emsp;<em>Whew! that cold wind freezes my nose!</em></p>
+<p>nimü lı zötëstö tüt pı ipüdü ko.&emsp;<em>Are you warm enough now?</em></p>
+<p>niün tenkin si gongoxi hoi otıkon müun.&emsp;<em>They heard the warning too late.</em></p>
+<p>nü lı umo mövi yüpik venüo nü.&emsp;<em>We are a brave people, and love our country.</em></p>
+<p>möi mënyüu lı si gik lëkın mënyüu Meli.&emsp;<em>All the children came except Mary.</em></p>
+<p>umo Zek ogolol züngö mülü yë ipüwë cüti lunsol nı müt zomo ximu.&emsp;<em>Jack seized a handful of pebbles and threw them into the lake.</em></p>
+<p>nıwos cömël övo lı si totsı hoi töxütsı pümi sël hoi yoüti mönpılı xe sün sınsi onö.&emsp;<em>This cottage stood on a low hill, at some distance from the village.</em></p>
+<p>hoi pıtün hëlxun xön yë yogö üsën tüt ü düi umo nokdo sıtyo hoi wokto yë zınkon onö yë nıwos cömël niün.&emsp;<em>On a fine summer evening, the two old people were sitting outside the door of their cottage.</em></p>
+<p>müt timiok nü somo timiok Zekö.&emsp;<em>Our bird's name is Jacko.</em></p>
+<p>xüto onö vısun titon onö müt xömütlö.&emsp;<em>The river knows the way to the sea.</em></p>
+<p>oütö ximu lı lö pı cok mıslı timiok xikö.&emsp;<em>The boat sails away, like a bird on the wing.</em></p>
+<p>niün dëko si pı ëto diyondë hoi möi ünhılun lëkın dëko yök vın.&emsp;<em>They looked cautiously about, but saw nothing.</em></p>
+<p>nıwos cüti yünyoü si son küncien xe lı küncien kon sıtyo lı küncien kon conzodo lı küncien kon cöüvon yë cüti ëto.&emsp;<em>The little house had three rooms, a sitting room, a bedroom, and a tiny kitchen.</em></p>
+<p>nü monodo si sınsi cüti yë sıskın moskül yë motüo noyo et xe lı sınsi cüti yë cënpö möi en nucoto.&emsp;<em>We visited my uncle's village, the largest village in the world.</em></p>
 <p>&emsp;<em>We learn something new each day.</em></p>
 <p>&emsp;<em>The market begins five minutes earlier this week.</em></p>
 <p>&emsp;<em>Did you find the distance too great?</em></p>
