Add more sentences

--- a/docs/works/shannon-test-sentences.mdx
+++ b/docs/works/shannon-test-sentences.mdx
@@ -30,7 +30,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>pinton lono di cën pı möcipo hoi ipüdü.&emsp;<em>The sun is rising now.</em></p>
 <p>möi umo pı oltü öitun si.&emsp;<em>All the people shouted.</em></p>
 <p>yoüti umo pı oltü öitun si.&emsp;<em>Some of the people shouted.</em></p>
-<p>ëto umo pı oltü öitun pı düi.&emsp;<em>Many of the people shouted twice.</em></p>
+<p>ëto umo pı oltü öitun pı düi vun.&emsp;<em>Many of the people shouted twice.</em></p>
 <p>umo xowosë pı ëto öitun.&emsp;<em>Happy people often shout.</em></p>
 <p>mocko xonluk onö tüu si zoston pı cën.&emsp;<em>The kitten jumped up.</em></p>
 <p>mocko xonluk onö tüu si zoston müt miëpıl potuk.&emsp;<em>The kitten jumped onto the table.</em></p>
@@ -41,7 +41,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>niltügu si hüzon.&emsp;<em>The rain has stopped.</em></p>
 <p>pı zelen ke niltügu hüzon.&emsp;<em>Soon the rain will stop.</em></p>
 <p>noyo xiwon vos pı zelen niltügu hüzon.&emsp;<em>I hope the rain stops soon.</em></p>
-<p>pı kut ü zonwul hönyo nıwos hoi övo.&emsp;<em>Once wild animals lived here.</em></p>
+<p>pı kut vun ü zonwul hönyo nıwos hoi övo.&emsp;<em>Once wild animals lived here.</em></p>
 <p>pı dilë ü niün vohoso si.&emsp;<em>Slowly she looked around.</em></p>
 <p>küu lı cok ze.&emsp;<em>Go away!</em></p>
 <p>nü küu lı lö.&emsp;<em>Let's go!</em></p>
@@ -106,7 +106,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>pölvëlë süwit sopölë ëo süwit.&emsp;<em>Sugar tastes sweet.</em></p>
 <p>mötö onö oncëmon ëo tüt&emsp;<em>The fire feels hot.</em></p>
 <p>vos umo wohi xonluk cüti oncëmon tölki, lı xoinpo.&emsp;<em>The little girl seemed lonely.</em></p>
-<p>motüo moskül yë umo moskül xonluk cüti pı kut lı si öni tulutı xömütlö.&emsp;<em>The little boy's father had once been a sailor.</em></p>
+<p>motüo moskül yë umo moskül xonluk cüti pı kut vun lı si öni tulutı xömütlö.&emsp;<em>The little boy's father had once been a sailor.</em></p>
 <p>noyo nocido si lipü polce nulun noyo.&emsp;<em>I have lost my blanket.</em></p>
 <p>timiok yë wıkse cınöpu köson si nıwos niün hoi nomü onö yë küöxı hünsık süwit.&emsp;<em>A robin has built his nest in the apple tree.</em></p>
 <p>hoi mutyu lono ü nü mokon si cöüvon nü hoi söpo titon.&emsp;<em>At noon we ate our lunch by the roadside.</em></p>
@@ -168,21 +168,21 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>niün dëko si pı ëto diyondë hoi möi ünhılun lëkın dëko yök vın.&emsp;<em>They looked cautiously about, but saw nothing.</em></p>
 <p>nıwos cüti yünyoü si son küncien xe lı küncien kon sıtyo lı küncien kon conzodo lı küncien kon cöüvon yë cüti ëto.&emsp;<em>The little house had three rooms, a sitting room, a bedroom, and a tiny kitchen.</em></p>
 <p>nü monodo si sınsi cüti yë sıskın moskül yë motüo noyo et xe lı sınsi cüti yë cënpö möi en nucoto.&emsp;<em>We visited my uncle's village, the largest village in the world.</em></p>
-<p>&emsp;<em>We learn something new each day.</em></p>
-<p>&emsp;<em>The market begins five minutes earlier this week.</em></p>
-<p>&emsp;<em>Did you find the distance too great?</em></p>
-<p>&emsp;<em>Hurry, children.</em></p>
-<p>&emsp;<em>Madam, I will obey your command.</em></p>
-<p>&emsp;<em>Here under this tree they gave their guests a splendid feast.</em></p>
-<p>&emsp;<em>In winter I get up at night, and dress by yellow candlelight.</em></p>
-<p>&emsp;<em>Tell the last part of that story again.</em></p>
-<p>&emsp;<em>Be quick or you will be too late.</em></p>
-<p>&emsp;<em>Will you go with us or wait here?</em></p>
-<p>&emsp;<em>She was always, shabby, often ragged, and on cold days very uncomfortable.</em></p>
-<p>&emsp;<em>Think first and then act.</em></p>
-<p>&emsp;<em>I stood, a little mite of a girl, upon a chair by the window, and watched the falling snowflakes.</em></p>
-<p>&emsp;<em>Show the guests these shells, my son, and tell them their strange history.</em></p>
-<p>&emsp;<em>Be satisfied with nothing but your best.</em></p>
+<p>nü pëüdo vın nëös hoi xokön lono.&emsp;<em>We learn something new each day.</em></p>
+<p>socok guvuyo onö hoi tiü ëvun yë hëlxun eswen hön wëxön övo.&emsp;<em>The market begins five minutes earlier this week.</em></p>
+<p>nimü yosten si otıkon cënpö yë mönpılı ko.&emsp;<em>Did you find the distance too great?</em></p>
+<p>küu lı viki noi umo xonluk.&emsp;<em>Hurry, children.</em></p>
+<p>noi umo wohi xëntil ü noyo ke vütsün hükun nimü.&emsp;<em>Madam, I will obey your command.</em></p>
+<p>hoi övo xe lı sël yë nomü övo, ü niün müt monodo niün lı cüdo si cöüvon yë xön ëto.&emsp;<em>Here under this tree they gave their guests a splendid feast.</em></p>
+<p>hön yogö üsën cunyü ü noyo di wili hoi pıtün öntön vio küon vüus sëlpö.&emsp;<em>In winter I get up at night, and dress by yellow candlelight.</em></p>
+<p>küu köto yogö vëlcin yë kiso ulyö pı dizel.&emsp;<em>Tell the last part of that story again.</em></p>
+<p>küu lı viki yodo ü nimü ke lı otıkon müun.&emsp;<em>Be quick or you will be too late.</em></p>
+<p>nimü ke lı lö ovek nü ko yodo motsı hoi övo ko.&emsp;<em>Will you go with us or wait here?</em></p>
+<p>niün pı möi woküt öntön vın yë ëtsö pis et xe pı sodolun lı si ëo vunlit hoi dinzoü, ün hoi lono cunyü lı yök lohot.&emsp;<em>She was always, shabby, often ragged, and on cold days very uncomfortable.</em></p>
+<p>küu goniso pı kut pinë küu tüu.&emsp;<em>Think first and then act.</em></p>
+<p>noyo lı si totsı mıslı müxi cüti yë umo wohi xonluk hoi sıtyo xe lı uklo müt kümun opoki, ün dëko si pölvëlë ximu pukü zigil.&emsp;<em>I stood, a little mite of a girl, upon a chair by the window, and watched the falling snowflakes.</em></p>
+<p>müt monodo onö küu möniso pëiku övo noi mënyüu noyo ün müt niün küu köto ıtıhos gonzil nı.&emsp;<em>Show the guests these shells, my son, and tell them their strange history.</em></p>
+<p>küu lı xowosë hön xünyu vın lëkın hön xön möi nimü.&emsp;<em>Be satisfied with nothing but your best.</em></p>
 <p>&emsp;<em>We consider them our faithful friends.</em></p>
 <p>&emsp;<em>We will make this place our home.</em></p>
 <p>&emsp;<em>The squirrels make their nests warm and snug with soft moss and leaves.</em></p>
@@ -231,9 +231,9 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>&emsp;<em>"This tree is fifty feet high," said the gardener.</em></p>
 <p>&emsp;<em>I think that this train leaves five minutes earlier today.</em></p>
 <p>&emsp;<em>My opinion is that the governor will grant him a pardon.</em></p>
-<p>&emsp;<em>Why he has left the city is a mystery.</em></p>
-<p>&emsp;<em>The house stands where three roads meet.</em></p>
-<p>&emsp;<em>He has far more money than brains.</em></p>
+<p>mötivö vos niün lı cok si sün sınsi, lı nosö.&emsp;<em>Why he has left the city is a mystery.</em></p>
+<p>ü nıwos onö lı totsı hoi vos son titon monodo möi dizel.&emsp;<em>The house stands where three roads meet.</em></p>
+<p>niün yünyoü ëto eswen muni en düuncit.&emsp;<em>He has far more money than brains.</em></p>
 <p>&emsp;<em>Evidently that gate is never opened, for the long grass and the great hemlocks grow close against it.</em></p>
 <p>&emsp;<em>I met a little cottage girl; she was eight years old, she said.</em></p>
 </HisyeoTabs>
