add more sentences

--- a/docs/works/shannon-test-sentences.mdx
+++ b/docs/works/shannon-test-sentences.mdx
@@ -183,33 +183,33 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>noyo lı si totsı mıslı müxi cüti yë umo wohi xonluk hoi sıtyo xe lı uklo müt kümun opoki, ün dëko si pölvëlë ximu pukü zigil.&emsp;<em>I stood, a little mite of a girl, upon a chair by the window, and watched the falling snowflakes.</em></p>
 <p>müt monodo onö küu möniso pëiku övo noi mënyüu noyo ün müt niün küu köto ıtıhos gonzil nı.&emsp;<em>Show the guests these shells, my son, and tell them their strange history.</em></p>
 <p>küu lı xowosë hön xünyu vın lëkın hön xön möi nimü.&emsp;<em>Be satisfied with nothing but your best.</em></p>
-<p>&emsp;<em>We consider them our faithful friends.</em></p>
-<p>&emsp;<em>We will make this place our home.</em></p>
-<p>&emsp;<em>The squirrels make their nests warm and snug with soft moss and leaves.</em></p>
-<p>&emsp;<em>The little girl made the doll's dress herself.</em></p>
-<p>&emsp;<em>I hurt myself.</em></p>
-<p>&emsp;<em>She was talking to herself.</em></p>
-<p>&emsp;<em>He proved himself trustworthy.</em></p>
-<p>&emsp;<em>We could see ourselves in the water.</em></p>
-<p>&emsp;<em>Do it yourself.</em></p>
-<p>&emsp;<em>I feel ashamed of myself.</em></p>
-<p>&emsp;<em>Sit here by yourself.</em></p>
-<p>&emsp;<em>The dress of the little princess was embroidered with roses, the national flower of the Country.</em></p>
-<p>&emsp;<em>They wore red caps, the symbol of liberty.</em></p>
-<p>&emsp;<em>With him as our protector, we fear no danger.</em></p>
-<p>&emsp;<em>All her finery, lace, ribbons, and feathers, was packed away in a trunk.</em></p>
-<p>&emsp;<em>Light he thought her, like a feather.</em></p>
-<p>&emsp;<em>Every spring and fall our cousins pay us a long visit.</em></p>
-<p>&emsp;<em>In our climate the grass remains green all winter.</em></p>
-<p>&emsp;<em>The boy who brought the book has gone.</em></p>
-<p>&emsp;<em>These are the flowers that you ordered.</em></p>
-<p>&emsp;<em>I have lost the book that you gave me.</em></p>
-<p>&emsp;<em>The fisherman who owned the boat now demanded payment.</em></p>
-<p>&emsp;<em>Come when you are called.</em></p>
-<p>&emsp;<em>I shall stay at home if it rains.</em></p>
-<p>&emsp;<em>When he saw me, he stopped.</em></p>
-<p>&emsp;<em>Do not laugh at me because I seem so absent minded.</em></p>
-<p>&emsp;<em>I shall lend you the books that you need.</em></p>
+<p>nü goniso niün mıslı sütüö cöünton nü.&emsp;<em>We consider them our faithful friends.</em></p>
+<p>nü ölë poxö övo ke lı ëo nıwos nü.&emsp;<em>We will make this place our home.</em></p>
+<p>cüi nomü onö ölë nıwos niün lı ëo tüt ün lohot vio vödoloc nulun ün woloko.&emsp;<em>The squirrels make their nests warm and snug with soft moss and leaves.</em></p>
+<p>umo wohi cüti köson öntön yë döcui umo vio cızi niün.&emsp;<em>The little girl made the doll's dress herself.</em></p>
+<p>noyo lı ëo tönkö ölë cızi noyo.&emsp;<em>I hurt myself.</em></p>
+<p>hoi pıslon niün köto müt cızi niün.&emsp;<em>She was talking to herself.</em></p>
+<p>niün möniso si cızi niün xe köi lı oksiös yë imon.&emsp;<em>He proved himself trustworthy.</em></p>
+<p>nü köi dëko cızi nü hoi ximu.&emsp;<em>We could see ourselves in the water.</em></p>
+<p>küu tüu nı vio cızi nimü.&emsp;<em>Do it yourself.</em></p>
+<p>noyo oncëmon xulmındo yë noyo.&emsp;<em>I feel ashamed of myself.</em></p>
+<p>küu sıtyo hoi övo ovek cızi nimü tölki.&emsp;<em>Sit here by yourself.</em></p>
+<p>ü öntön yë mënyüu wohi cüti yë hondon kon hükun lı vos müt nı zohit si inpoli xe lı inpoli centık yë küöcyo.&emsp;<em>The dress of the little princess was embroidered with roses, the national flower of the Country.</em></p>
+<p>niün öntön si öntön wik hünsık xe lı ostok onö yë völni.&emsp;<em>They wore red caps, the symbol of liberty.</em></p>
+<p>ovek niün xe mıslı voko mevüs nü, nü lı yök ösölë yë pongösi.&emsp;<em>With him as our protector, we fear no danger.</em></p>
+<p>möi vın moxo niün xe lı polce kümun lı listo lı towë, lı vos pı cies wëko si nı hoi dıpo.&emsp;<em>All her finery, lace, ribbons, and feathers, was packed away in a trunk.</em></p>
+<p>lı si xoinpo ü vos niün wohi lı hulükö, oldıs goniso yë niün moskül mıslı towë timiok.&emsp;<em>Light he thought her, like a feather.</em></p>
+<p>hön xokön yogö üsën niök ün yogö üsën kon kudüdo ü mënyüu yë sıskın motüo et nü cıvü kon monodo kildo müt nü.&emsp;<em>Every spring and fall our cousins pay us a long visit.</em></p>
+<p>hoi piömu këlös nü ü hülü onö pı möcipo lı lünti hön yogö üsën cunyü.&emsp;<em>In our climate the grass remains green all winter.</em></p>
+<p>umo moskül xonluk onö xe oköt si tömös onö, lı si cok.&emsp;<em>The boy who brought the book has gone.</em></p>
+<p>övo lı inpoli onö vos niün lı si ëo kölmüdul ölë nı.&emsp;<em>These are the flowers that you ordered.</em></p>
+<p>noyo nocido si tömös onö vos niün müt noyo cüdo nı.&emsp;<em>I have lost the book that you gave me.</em></p>
+<p>öni wëtodü micin xe yünyoü oütö ximu onö, hoi ipüdü pı len sölü cıvü.&emsp;<em>The fisherman who owned the boat now demanded payment.</em></p>
+<p>küu lı gik hoi vos nimü lı xokülü.&emsp;<em>Come when you are called.</em></p>
+<p>noyo ke lı gö hoi nıwos noyo hön hüzon.&emsp;<em>I shall stay at home if it rains.</em></p>
+<p>hön vos niün dëko noyo, niün niltügu si.&emsp;<em>When he saw me, he stopped.</em></p>
+<p>küu lı liülë müt noyo nënko vos lı xoinpo ü vos noyo lı göwo löicök.&emsp;<em>Do not laugh at me because I seem so absent minded.</em></p>
+<p>noyo pı ilxizuk ke cüdo tömös onö vos nimü puswen nı.&emsp;<em>I shall lend you the books that you need.</em></p>
 <p>&emsp;<em>Come early next Monday if you can.</em></p>
 <p>&emsp;<em>If you come early, wait in the hall.</em></p>
 <p>&emsp;<em>I had a younger brother whose name was Antonio.</em></p>
